# Qt_vcpkg_manifest_example

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
CMake/: DeployQtInstall.cmake  HelperMacros.cmake  InstallTargetRuntimeDependencies.cmake  Qt56CoreDeploySupport.cmake  Qt56CoreMacros.cmake  Qt56PublicTargetHelpers.cmake  SetupProjectPackaging.cmake  qt_unix.conf.in
CMake/ToRemove/: windeployqt.bat.in
vcpkg/ports/linuxdeployqt/: vcpkg.json
